Tiny styling fix
* Dark theme is more clear now (background and foreground colours swapped)

* Adjusted the theme switch button's shadow to be in line with the other shadows in mobile view.

* Added margin to business card text for mobile view to make sure the edge of the text aren't too close to the screen edges.

--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,8 @@ body a:hover {
 }
 
 :root {
-    --main-bg-color: #282c34;
-    --card-bg-color: #21252c;
+    --main-bg-color: #21252c;
+    --card-bg-color: #282c34;
     --text-primary: #ececec;
     --text-secondary: darkgray;
     --url-primary: #ececec;
