--- a/src/framework/cards/business-card/businessCard.module.css
+++ b/src/framework/cards/business-card/businessCard.module.css
@@ -1,5 +1,7 @@
 .container {
     margin-bottom: 35px;
+    margin-left: 20px;
+    margin-right: 20px;
     text-align: center;
     color: var(--url-static);
 }
