--- a/src/framework/layout/mainLayout.module.css
+++ b/src/framework/layout/mainLayout.module.css
@@ -101,6 +101,8 @@
         position: static;
         box-shadow: 0px 10px 5px 0px var(--shadow-color);
         margin-bottom: 20px;
+        border-bottom-left-radius: 15px;
+        border-bottom-right-radius: 15px;
     }
 
     .right {
@@ -115,7 +117,7 @@
         display:flex;
         text-align: center;
         justify-content: center;
-        margin-top: -30px;
+        margin-top: -20px;
         margin-bottom: 40px;
     }
 
@@ -132,7 +134,12 @@
         border: none;
     }
 
+    .themeSwitch {
+        margin-top: 5px;
+    }
+
     .themeSwitch button {
         border-radius: 10px;
+        box-shadow: 0px 5px 5px 3px var(--shadow-color);
     }
 }
